<resources>
    <string name="app_name">Calculator</string>
    <string name="zerozero">00</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="clear">CLR</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="settings">Settings</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="themes">Themes</string>
    <string name="value_percentage">20%</string>
    <string name="theme1">Tranquility</string>
    <string name="theme2">Blue Haze</string>
    <string name="theme3">Purple Dream</string>
</resources>